--- a/backend/mvc/layouts/views/main_layout.css
+++ b/backend/mvc/layouts/views/main_layout.css
@@ -11,7 +11,7 @@ body {
   margin: 0;
   height: 100%;
   font-family: Arial, Helvetica, sans-serif;
-  background-color: #f0f8ff; /* Light blue background for a fresher look */
+  background-color: #f1f1f1; /* Light blue background for a fresher look */
 }
 
 .bar-button {
@@ -30,7 +30,7 @@ body {
 
 .top-nav a {
   float: left;
-  color: #ffffff; /* White text for better readability */
+  color: #f1f1f1; /* White text for better readability */
   text-align: center;
   padding: 10px;
   text-decoration: none;
@@ -55,7 +55,7 @@ body {
 
 .view-area {
   all: initial;
-  background-color: #ffffff; /* White background for content area */
+  background-color: #f1f1f1; /* White background for content area */
   display: inline-block;
   vertical-align: top;
   height: 100%;
@@ -64,7 +64,7 @@ body {
 
 .side-nav {
   padding-top: 20px;
-  background-color: #ffa500; /* Warm orange for side navigation */
+  background-color: #f1f1f1; /* Warm orange for side navigation */
   display: inline-block;
   vertical-align: top;
   height: 100%;
